namespace PowerPlantMapAPI.Data.Dto;

public class FeaturePropertyDto
{
    public string? Id { get; set; }
    public string? Name { get; set; }
    public string? Description { get; set; }
    public string? Img { get; set; }
}
