@startuml GetPowerPlantBasics

class PowerPlantBasicsModel {
    - string: Type
    - FeaturePropertyDto: Properties
    - FeatureGeometryDto: Geometry
}

class FeaturePropertyDto {
    - string: Id
    - string: Name
    - string: Description
    - string: Img
}

class FeatureGeometryDto {
    - string: Type
    - List<float>: Coordinates
}

PowerPlantBasicsModel *-- FeaturePropertyDto
PowerPlantBasicsModel *-- FeatureGeometryDto

@enduml